lifeguard-derive/tests/ui/compile_error_save_as_empty_string.stderr
error: Empty string not allowed in save_as attribute. save_as must contain a valid SQL expression.
  --> tests/ui/compile_error_save_as_empty_string.rs:13:17
   |
13 |     #[save_as = ""]
   |                 ^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_save_as_empty_string.rs:15:2
   |
15 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_save_as_empty_string.rs`
